--- a/TP5_Grupo12/src/main/resources/templates/layouts/header.html
+++ b/TP5_Grupo12/src/main/resources/templates/layouts/header.html
@@ -44,12 +44,13 @@
 								aria-labelledby="navbarDropdown">
 								<li><a class="dropdown-item" href="#">Docentes</a></li>
 								<li><a class="dropdown-item" href="#">Alumnos</a></li>
+								<li><hr class="dropdown-divider"></li>
+								<li><a class="dropdown-item" href="#">Becas</a></li>
+								<li><a class="dropdown-item" href="#">Cursos</a></li>
 							</ul>
 						</li>
 					</ul>
-					
 				</div>
-				
 			</div>
 		</nav>
 	</header>
