--- a/TP5_Grupo12/src/main/resources/templates/index.html
+++ b/TP5_Grupo12/src/main/resources/templates/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 	<header th:replace="/layouts/header::header"></header>
-
-	<section>
-		<h3>Cursos con inscripcion</h3>
+<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+	<section class="col-md-8" style="margin: auto">	
+		<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Cursos con inscripción abierta</h3></header>
 		<ol>
 			<li><a href="idioma">Idioma</a></li>
 			<li>Diseño</li>
@@ -19,7 +20,8 @@
 			<li>Conferencias</li>
 		</ol>
 	</section>
-
+	</div>
+	</div>
 	<footer th:replace="/layouts/footer::footer"></footer>
 	
 	<script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
