--- a/TP5_Grupo12/src/main/resources/static/css/style.css
+++ b/TP5_Grupo12/src/main/resources/static/css/style.css
@@ -9,6 +9,9 @@ p {
 a {
 	font-family: Courier New;
 	font-size: medium;
+	padding: 8px;
+	text-decoration: none;
+	border-radius: 5px;
 }
 
 html {
@@ -20,10 +23,24 @@ body {
   margin-bottom: 40px;
 }
 footer {
-  background-color: black;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  color: white;
+marging-top:5%;
+position: absolute;
+bottom: 0;
+width: 100%;
+color: black;
+border-radius: 5px; 
+height:auto;
+padding-left:13%;
+font-weight:bold;
+
 }
+
+ul li a:hover {
+    background-color:red;
+    text-shadow: 0 8px 16px 0 rgb(0, 0, 0);
+  }
+  
+  ul li a{
+  font-weight:bold;
+  font-family:arial;
+  }
