--- a/TP5_Grupo12/src/main/resources/templates/agenda.html
+++ b/TP5_Grupo12/src/main/resources/templates/agenda.html
@@ -8,9 +8,25 @@
 </head>
 <body>
 	<header th:replace="/layouts/header::header"></header>
-	<h1>AGENDA</h1>
-	
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/qXrfQXqa7C4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>		
+<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+		<section class="col-md-12" style="margin: auto">
+		<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Agenda</h3></header>
+			<h3>What is Lorem Ipsum?</h3>
+			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's 
+			standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a 
+			type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining 
+			essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
+			 and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p><br>
+			 
+			 <iframe width="560" height="315" src="https://www.youtube.com/embed/WN3KMTSzv-U" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			 
+			
+			
+		</section>
+		
+	</div>
+	</div>		
 	<footer th:replace="/layouts/footer::footer"></footer>
 	
 	<script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
