--- a/TP5_Grupo12/src/main/resources/templates/beneficios.html
+++ b/TP5_Grupo12/src/main/resources/templates/beneficios.html
@@ -9,12 +9,12 @@
 <body>
 	
 	<header th:replace="/layouts/header::header"></header>
-	<div class="container">
-		<div class="row">
-			<h3>Lista de Becas</h3>
-		</div>
-		<div class="row">
-			<div class="col-sm-12 col-md-10">
+	<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+		<section class="col-md-12" style="margin: auto">
+		<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Becas</h3></header>		
+		
+			
 				<table class="table table-hover table-dark">
 					<tr>
 						<th>Codigo</th>
@@ -31,8 +31,9 @@
 						<td th:text="${becas.estado}"></td>				
 					</tr>
 				</table>
-			</div>
-		</div>
+			
+		</section>
+		</div>		
 	</div>
 
 
