--- a/TP5_Grupo12/src/main/resources/templates/contacto.html
+++ b/TP5_Grupo12/src/main/resources/templates/contacto.html
@@ -2,13 +2,17 @@
 <html xmlns:th="http://thymeleaf.org">
 <head>
 <meta charset="utf-8">
-<link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" ></link> 
-<link type="text/css" rel="stylesheet" href="../../../css/style.css" ></link>
 <title>CONTACTO</title>
+<link type="text/css" rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" ></link>
+<link type="text/css" rel="stylesheet" href="../../../css/style.css" >
 </head>
 <body>
 	<header th:replace="/layouts/header::header"></header>
-	<h1>CONTACTO</h1>
+	
+	<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+	<section class="col-md-12" style="margin: auto"><!--inicio de section-->
+	<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Contacto</h3></header>
 	<form action="" method="post" target="_blank">
 		<fieldset>
 			<p>
@@ -38,12 +42,17 @@
 				<label>Mensaje: <textarea name="mensaje"></textarea>
 			</p>
 			<p>
-				<input type="submit" value="Enviar datos">
+				<!-- <button class="btn btn-primary" type="button">enviar datos</button>-->
+				<input class="btn btn-primary" type="submit" value="Enviar datos"><br>
 				<!-- <input type="reset" value="Restaurar formulario"> -->
 			</p>
 		</fieldset>
 	</form>
+	</section>
+	</div>
+	</div>
 	<footer th:replace="/layouts/footer::footer"></footer>
+	
 	<script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
 	<script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
 	<script src="/webjars/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
