--- a/TP5_Grupo12/src/main/resources/templates/idioma.html
+++ b/TP5_Grupo12/src/main/resources/templates/idioma.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 	<header th:replace="/layouts/header::header"></header>
-	<h1>IDIOMAS</h1>
-		<section>
-			<h3>Encabezados</h3>
-			<p></p>
-			<table class="default" style="width: 100%; border: 2px solid;">
+	<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+		<section class="col-md-8" style="margin: auto">
+	<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Idiomas</h3></header>
+		
+			<table class="table table-hover table-dark">
 				<tr>
 					<th>Titulo del curso</th>
 					<th>Fecha de inicio</th>
@@ -33,6 +34,10 @@
 				</tr>
 			</table>
 		</section>
+		</div>
+		</div>
+		
+		
 	<footer th:replace="/layouts/footer::footer"></footer>
 	<script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
 	<script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
