--- a/TP5_Grupo12/src/main/resources/templates/layouts/footer.html
+++ b/TP5_Grupo12/src/main/resources/templates/layouts/footer.html
@@ -5,9 +5,9 @@
 <style type="text/css" href="../../../css/style.css" rel="stylesheet"></style>
 </head>
 <body>
-	<footer th:fragment="footer">
-		<p>2022. Portal de Capacitación – Av. Gral. Manuel Belgrano 789 –
-			Teléfono (388) 999999 S. S. de Jujuy República Argentina.</p>
+	<footer th:fragment="footer" class=bg-warning>
+		<p>Portal de Capacitación – Gral. Manuel Belgrano 789 –
+			Teléfono (388) 999999 S. S. de Jujuy, Argentina.</p>
 	</footer>
 	<script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
 	<script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
