--- a/TP5_Grupo12/src/main/resources/templates/lista_alumnos.html
+++ b/TP5_Grupo12/src/main/resources/templates/lista_alumnos.html
@@ -9,10 +9,10 @@
 <body>
 
 <header th:replace="/layouts/header :: header"></header>
-		<div class="container">
-			<br>
-			<p class="h4 mb-10">ALUMNOS</p>
-			<br>
+		<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+	<section class="col-md-12" style="margin: auto">	
+	<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Editar Alumnos</h3></header>
 			<div class="col-12 d-flex justify-content-center">
 				<table class="table table-striped table-hover">
 						<tr>
@@ -37,6 +37,8 @@
 					</table>
 				<br><br>
 				
+			</div>
+			</section>
 			</div>
 		
 		</div>
