--- a/TP5_Grupo12/src/main/resources/templates/lista_beca.html
+++ b/TP5_Grupo12/src/main/resources/templates/lista_beca.html
@@ -9,10 +9,10 @@
 <body>
 
 <header th:replace="/layouts/header :: header"></header>
-		<div class="container">
-			<br>
-			<p class="h4 mb-10">BECAS</p>
-			<br>
+	<div class="container bg-light">
+	<div class="row"> <!--inicio de contenedor row-->
+	<section class="col-md-12" style="margin: auto">	
+	<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Editar Becas</h3></header>
 			<div class="col-12 d-flex justify-content-center">
 				<table class="table table-striped table-hover">
 						<tr>
@@ -34,11 +34,10 @@
 							<a href="#" id="eliminarBeca" class="btn btn-danger">Eliminar</a>
 							</td>
 						</tr>
-					</table>
-				<br><br>
-				
+					</table>								
 			</div>
-		
+			</section>
+			</div>		
 		</div>
 		<footer th:replace="/layouts/footer :: footer"></footer>
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
