--- a/TP5_Grupo12/src/main/resources/templates/lista_docentes.html
+++ b/TP5_Grupo12/src/main/resources/templates/lista_docentes.html
@@ -9,10 +9,10 @@
 <body>
 
 <header th:replace="/layouts/header :: header"></header>
-		<div class="container">
-			<br>
-			<p class="h4 mb-10">DOCENTES</p>
-			<br>
+	<div class="container bg-light">
+	 <div class="row"> <!--inicio de contenedor row-->
+	 <section class="col-md-12" style="margin: auto">
+	 <header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Editar Docentes</h3></header>
 			<div class="col-12 d-flex justify-content-center">
 				<table class="table table-striped table-hover">
 						<tr>
@@ -38,7 +38,8 @@
 				<br><br>
 				
 			</div>
-		
+			</section>
+			</div>		
 		</div>
 		<footer th:replace="/layouts/footer :: footer"></footer>
 		<script type="text/javascript" th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
