--- a/TP5_Grupo12/src/main/resources/templates/mostrar_cursos.html
+++ b/TP5_Grupo12/src/main/resources/templates/mostrar_cursos.html
@@ -9,13 +9,13 @@
 <body>
 
 <header th:replace="/layouts/header::header"></header>
-	<div class="container">
-		<div class="row">
-			<h3>Lista de Becas</h3>
-		</div>
-		<div><a th:href="@{/docente/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div>
-		<div class="row">
-			<div class="col-sm-12 col-md-10">
+	<div class="container bg-light">
+	 <div class="row"> <!--inicio de contenedor row-->
+	 <section class="col-md-12" style="margin: auto">
+			<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Lista de Cursos</h3></header>
+		
+			<div><a th:href="@{/docente/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
+		
 				<table class="table table-hover table-dark">
 					<tr>
 						<th>Codigo</th>
@@ -39,11 +39,10 @@
 						<td th:text="${curso.docente.apellido}"></td>									
 					</tr>
 				</table>
+				</section>
 			</div>
 		</div>
-	</div>
-
-
+	
 	<footer th:replace="/layouts/footer::footer"></footer>
 	<script src="/webjars/jquery/jquery.min.js" type="text/javascript"></script>
 	<script src="/webjars/popper.js/umd/popper.min.js" type="text/javascript"></script>
