--- a/TP5_Grupo12/src/main/resources/templates/mostrar_docentes.html
+++ b/TP5_Grupo12/src/main/resources/templates/mostrar_docentes.html
@@ -9,13 +9,12 @@
 <body>
 
 <header th:replace="/layouts/header::header"></header>
-	<div class="container">
-		<div class="row">
-			<h3>Lista de Docentes</h3>
-		</div>
-		<div><a th:href="@{/docente/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div>
-		<div class="row">
-			<div class="col-sm-12 col-md-10">
+	<div class="container bg-light">
+	 <div class="row"> <!--inicio de contenedor row-->
+	 <section class="col-md-12" style="margin: auto">
+	 <header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Lista de Docentes</h3></header>
+		<div><a th:href="@{/docente/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
+		
 				<table class="table table-hover table-dark">
 					<tr>
 						<th>Legajo</th>
@@ -32,9 +31,9 @@
 						<td th:text="${docente.telefono}"></td>				
 					</tr>
 				</table>
+				</section>
 			</div>
-		</div>
-	</div>
+		</div>	
 
 
 	<footer th:replace="/layouts/footer::footer"></footer>
