--- a/TP5_Grupo12/src/main/resources/templates/lista_docentes.html
+++ b/TP5_Grupo12/src/main/resources/templates/lista_docentes.html
@@ -30,8 +30,8 @@
 							<td th:text="${docente.email}"></td>
 							<td th:text="${docente.telefono}"></td>
 							<td>
-							<a href="#" id="editarDocente" class="btn btn-warning">Editar</a>
-							<a href="#" id="eliminarDocente" class="btn btn-danger">Eliminar</a>
+							<a th:href="@{/docente/editar/}+${docente.legajo}" id="editarDocente" class="btn btn-warning">Editar</a>
+							<a th:href="@{/docente/eliminar/}+${docente.legajo}" id="eliminarDocente" class="btn btn-danger">Eliminar</a>
 							</td>
 						</tr>
 					</table>
