--- a/TP5_Grupo12/src/main/resources/templates/lista_alumnos.html
+++ b/TP5_Grupo12/src/main/resources/templates/lista_alumnos.html
@@ -30,8 +30,8 @@
 							<td th:text="${alumno.email}"></td>
 							<td th:text="${alumno.telefono}"></td>
 							<td>
-							<a href="#" id="editarAlumno" class="btn btn-warning">Editar</a>
-							<a href="#" id="eliminarAlumno" class="btn btn-danger">Eliminar</a>
+							<a th:href="@{/alumno/editar/}+${alumno.dni}" id="editarAlumno" class="btn btn-warning">Editar</a>
+							<a th:href="@{/alumno/eliminar/}+${alumno.dni}" id="eliminarAlumno" class="btn btn-danger">Eliminar</a>
 							</td>
 						</tr>
 					</table>
