--- a/TP5_Grupo12/src/main/resources/templates/mostrar_becas.html
+++ b/TP5_Grupo12/src/main/resources/templates/mostrar_becas.html
@@ -25,7 +25,7 @@
 					</tr>
 					<tr th:each="beca: ${beca}">
 						<td th:text="${beca.codigo}"></td>
-						<td th:text="${beca.curso}"></td>
+						<td th:text="${beca.curso.titulo}"></td>
 						<td th:text="${beca.inicio}"></td>
 						<td th:text="${beca.cierre}"></td>
 						<td th:text="${beca.estado}"></td>				
