Capa de Datos, mejoras en las relaciones y mapeos

--- a/TP5_Grupo12/src/main/resources/templates/mostrar_alumnos.html
+++ b/TP5_Grupo12/src/main/resources/templates/mostrar_alumnos.html
@@ -12,7 +12,7 @@
 	<div class="container bg-light">
 	 <div class="row"> <!--inicio de contenedor row-->
 	 <section class="col-md-12" style="margin: auto">
-		<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Lista de Aumnos</h3></header>
+		<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Lista de Alumnos</h3></header>
 	
 		<div><a th:href="@{/alumno/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
 				
