--- a/TP5_Grupo12/src/main/resources/templates/mostrar_cursos.html
+++ b/TP5_Grupo12/src/main/resources/templates/mostrar_cursos.html
@@ -14,7 +14,7 @@
 	 <section class="col-md-12" style="margin: auto">
 			<header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Lista de Cursos</h3></header>
 		
-			<div><a th:href="@{/docente/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
+			<div><a th:href="@{/cursos/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
 		
 				<table class="table table-hover table-dark">
 					<tr>
