--- a/TP5_Grupo12/src/main/resources/templates/mostrar_becas.html
+++ b/TP5_Grupo12/src/main/resources/templates/mostrar_becas.html
@@ -13,7 +13,7 @@
 	 <div class="row"> <!--inicio de contenedor row-->
 	 <section class="col-md-12" style="margin: auto">
 	 <header style="background-color: cornflowerblue; margin-top: 1.4%; border-radius: 10px;"><h3>Lista de Becas</h3></header>		
-		<div><a th:href="@{/docente/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
+		<div><a th:href="@{/beneficios/nuevo}" id="nuevo" class="btn btn-primary">Nuevo</a></div><br>
 		
 				<table class="table table-hover table-dark">
 					<tr>
